ModelTraining Keras + Ensemble

--- a/Banking_Call_PoC (3).ipynb
+++ b/Banking_Call_PoC (3).ipynb
@@ -2652,7 +2652,8 @@
    "cell_type": "code",
    "execution_count": 70,
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "collapsed": true
    },
    "outputs": [
     {
